[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/ksg4d5.png" type="Texture" id=1]
[ext_resource path="res://sprites/head_bg_less.png" type="Texture" id=2]
[ext_resource path="res://fonts/reglo_bold_menu.tres" type="DynamicFont" id=3]
[ext_resource path="res://sprites/QgtUCH.png" type="Texture" id=4]
[ext_resource path="res://fonts/officecodepro_regular_panel.tres" type="DynamicFont" id=5]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=6]
[ext_resource path="res://sprites/Project_Ithaca_Title.png" type="Texture" id=7]
[ext_resource path="res://scripts/glitch_effect.gd" type="Script" id=8]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0, 1, 0, 1 )
grow_begin = -5.0
grow_end = -5.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 1, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0, 1, 0, 1 )
grow_begin = -2.0
grow_end = -2.0
thickness = 2
vertical = true

[sub_resource type="Theme" id=4]
default_font = ExtResource( 5 )
Button/colors/font_color = Color( 0, 0.501961, 0, 1 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
Button/colors/font_color_hover = Color( 0, 1, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 1, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 1 )
Label/colors/font_color = Color( 0, 1, 0, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 2 )
VScrollBar/styles/grabber_highlight = SubResource( 2 )
VScrollBar/styles/grabber_pressed = SubResource( 2 )
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null
VSeparator/constants/separation = 4
VSeparator/styles/separator = SubResource( 3 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;
render_mode unshaded;

uniform vec2 scr_tex_size;
uniform float size_x;
uniform float size_y;

void fragment() {
	vec2 uv = SCREEN_UV;
	uv -= mod(uv, vec2(size_x, size_y) / scr_tex_size);
	COLOR.rgb = textureLod(SCREEN_TEXTURE, uv, 0.0).rgb;
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 5 )
shader_param/scr_tex_size = Vector2( 1920, 1080 )
shader_param/size_x = 1.0
shader_param/size_y = 1.0

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/scr_tex_size = Vector2( 1920, 1080 )
shader_param/size_x = 8.0
shader_param/size_y = 8.0

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
render_mode unshaded;

void fragment() {
	vec3 grey = vec3(0.5, 0.5, 0.5);
	vec3 green = vec3(0.0, 1.0, 0.0);
	COLOR.rgb = vec3(dot(texture(SCREEN_TEXTURE, SCREEN_UV).rgb, grey)) * green;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[node name="MainMenuRoot" type="Node2D"]
script = ExtResource( 6 )
title_glitch_path = NodePath("VSplitContainer/TitleArtContainer/TextureRect/BackBufferCopy2/GlitchEffect")
continue_button_path = NodePath("VSplitContainer/VBoxContainer/ContinueButton")

[node name="VSplitContainer" type="VBoxContainer" parent="."]
margin_left = 480.0
margin_right = 1440.0
margin_bottom = 1080.0
theme = SubResource( 4 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleArtContainer" type="MarginContainer" parent="VSplitContainer"]
margin_right = 960.0
margin_bottom = 540.0
rect_min_size = Vector2( 960, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VSplitContainer/TitleArtContainer"]
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="BackBufferCopy2" type="BackBufferCopy" parent="VSplitContainer/TitleArtContainer/TextureRect"]
position = Vector2( -480, 0 )
copy_mode = 2
rect = Rect2( 0, 0, 1920, 1080 )

[node name="GlitchEffect" type="ColorRect" parent="VSplitContainer/TitleArtContainer/TextureRect/BackBufferCopy2"]
material = SubResource( 9 )
margin_left = 484.0
margin_top = 134.0
margin_right = 1464.0
margin_bottom = 455.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
glitch_material = SubResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
margin_top = 540.0
margin_right = 960.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 540 )
custom_constants/separation = 32

[node name="NewGameButton" type="Button" parent="VSplitContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 3 )
text = "> Join the Fight! <"

[node name="ContinueButton" type="Button" parent="VSplitContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 960.0
margin_bottom = 166.0
custom_fonts/font = ExtResource( 3 )
text = "> Continue to Serve <"

[node name="GWJTexture" type="TextureRect" parent="."]
margin_left = -18.9972
margin_top = 713.699
margin_right = 183.003
margin_bottom = 917.699
hint_tooltip = "Godot Wild Jam Logo"
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThemeTexture" type="TextureRect" parent="."]
margin_left = 10.5529
margin_top = 915.263
margin_right = 774.553
margin_bottom = 1073.26
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WildcardTexture" type="TextureRect" parent="."]
margin_left = 199.683
margin_top = 746.834
margin_right = 577.683
margin_bottom = 908.834
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="WildcardTexture"]
copy_mode = 2
rect = Rect2( -960, -540, 1920, 1080 )

[node name="GlitchEffect" type="ColorRect" parent="WildcardTexture/BackBufferCopy"]
material = SubResource( 6 )
margin_left = 248.0
margin_top = 3.0
margin_right = 364.0
margin_bottom = 163.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
position = Vector2( 270.443, 905.895 )
rect = Rect2( -300, -200, 600, 380 )

[node name="ColorRect" type="ColorRect" parent="BackBufferCopy"]
material = SubResource( 8 )
margin_left = -300.0
margin_top = -180.0
margin_right = 300.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VSplitContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
